--- a/log-monitor/src/main/resources/META-INF/resources/mlf4j/log4j/control-center.html
+++ b/log-monitor/src/main/resources/META-INF/resources/mlf4j/log4j/control-center.html
@@ -19,7 +19,7 @@
 
   <table style="margin-top: 5px; width: 800px;">
     <tr>
-      <td width="93%"><input id="loggerName" name="loggerName" type="text" value="" size="72" />输入日志名称,如:com.travelsky</td>
+      <td width="93%"><input id="loggerName" name="loggerName" type="text" value="" size="72" />输入日志名称,如:com.demo</td>
       <td><input type="button" onclick="queryLogInfo();" value="查询" /></td>
     </tr>
   </table>
